Refactor index.html for portfolio updates

--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
-  <head>
-    <meta charset="UTF-8">
-    <title>Untitled</title>
-    <link rel="stylesheet" href="./style.css">
-
-  </head>
-    
-  <body>
-  <!DOCTYPE html>
-<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>Tanishq Das | Portfolio</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./style.css">
 
 <style>
 body{
@@ -219,8 +209,8 @@ footer{
   <a href="images/certificates/ibm_skillsbuild_frontend.png" target="_blank">
     <img src="images/certificates/ibm_skillsbuild_frontend.png" alt="IBM Front End" style="width:200px; border-radius:8px;">
   </a>
-  <a href="images/certificates/ml_python.png" target="_blank">
-    <img src="images/certificates/ml_python.png" alt="Machine Learning Python" style="width:200px; border-radius:8px;">
+  <a href="images/certificates/ml_python.jpeg" target="_blank">
+    <img src="images/certificates/ml_python.jpeg" alt="Machine Learning Python" style="width:200px; border-radius:8px;">
   </a>
   <a href="images/certificates/google_cloud_genai.png" target="_blank">
     <img src="images/certificates/google_cloud_genai.png" alt="Google Cloud Generative AI" style="width:200px; border-radius:8px;">
@@ -260,14 +250,8 @@ footer{
 © 2026 Tanishq Das
 </footer>
 
-<script>
-console.log("Portfolio loaded successfully");
-</script>
+<script src="./script.js"></script>
 
 </body>
 </html>
-    <script  src="./script.js"></script>
 
-  </body>
-  
-</html>
