--- a/index.html
+++ b/index.html
@@ -121,13 +121,15 @@ footer{
 </nav>
 
 <header id="home">
-<img src="images/TANISHQ_DAS.jpeg"
-     alt="Tanishq Das"
-     loading="lazy"
-     onerror="this.style.display='none'">
+<img src="image/TANISHQ_DAS.jpeg" alt="Tanishq Das" loading="lazy">
 <h1>Tanishq Das</h1>
 <p>BTech Artificial Intelligence Student</p>
-<p>Focused on AI, Machine Learning, and CNN-based real world projects</p>
+<p>A strong foundation in Artificial Intelligence andData Science is coupled with a diverse range of
+certifications in programming and algorithms.Enthusiasm for advancing technologicalsolutions is evident,
+reflecting a commitment tocontinuous learning and application ofknowledge. Eager to contribute to meaningful
+projects that drive positive impact and innovation within a collaborative environment. Aproactive approach to
+problem-solving and apassion for leveraging technology for improvement has been cultivated.
+</p>
 </header>
 
 <section id="about">
@@ -198,17 +200,16 @@ footer{
 
 <div style="display:flex;flex-wrap:wrap;gap:20px;justify-content:center;">
 
-<img src="images/certificates/dsa_java.png" loading="lazy" onerror="this.style.display='none'" style="width:200px;border-radius:8px;">
-<img src="images/certificates/programming_basics.png" loading="lazy" onerror="this.style.display='none'" style="width:200px;border-radius:8px;">
-<img src="images/certificates/robotics_ai.png" loading="lazy" onerror="this.style.display='none'" style="width:200px;border-radius:8px;">
-<img src="images/certificates/google_it_support.png" loading="lazy" onerror="this.style.display='none'" style="width:200px;border-radius:8px;">
-<img src="images/certificates/ibm_skillsbuild_frontend.png" loading="lazy" onerror="this.style.display='none'" style="width:200px;border-radius:8px;">
-<img src="images/certificates/ml_python.jpeg" loading="lazy" onerror="this.style.display='none'" style="width:200px;border-radius:8px;">
-<img src="images/certificates/google_cloud_genai.png" loading="lazy" onerror="this.style.display='none'" style="width:200px;border-radius:8px;">
-<img src="images/certificates/web_dev_fundamentals.png" loading="lazy" onerror="this.style.display='none'" style="width:200px;border-radius:8px;">
-<img src="images/certificates/python_essentials.png" loading="lazy" onerror="this.style.display='none'" style="width:200px;border-radius:8px;">
-<img src="images/certificates/sebi_financial_literacy.png" loading="lazy" onerror="this.style.display='none'" style="width:200px;border-radius:8px;">
-<img src="images/certificates/matlab_onramp.png" loading="lazy" onerror="this.style.display='none'" style="width:200px;border-radius:8px;">
+<img src="image/certificates/dsa_java.jpg" loading="lazy" style="width:200px;border-radius:8px;">
+<img src="image/certificates/programming_basics.jpg" loading="lazy" style="width:200px;border-radius:8px;">
+<img src="image/certificates/robotics_ai.jpg" loading="lazy" style="width:200px;border-radius:8px;">
+<img src="image/certificates/google_it_support.jpg" loading="lazy" style="width:200px;border-radius:8px;">
+<img src="image/certificates/ibm_skillsbuild_frontend.jpg" loading="lazy" style="width:200px;border-radius:8px;">
+<img src="image/certificates/ml_python.jpeg" loading="lazy" style="width:200px;border-radius:8px;">
+<img src="image/certificates/google_cloud_genai.jpg" loading="lazy" style="width:200px;border-radius:8px;">
+<img src="image/certificates/web_dev_fundamentals.png" loading="lazy" style="width:200px;border-radius:8px;">
+<img src="image/certificates/python_essentials.jpg" loading="lazy" style="width:200px;border-radius:8px;">
+<img src="image/certificates/sebi_financial_literacy.jpg" loading="lazy" style="width:200px;border-radius:8px;">
 
 </div>
 </section>
